--- a/week-one/placing-elements.html
+++ b/week-one/placing-elements.html
@@ -16,8 +16,11 @@
             </div>
         </header>
         <container>
-            <div id="mainimage">
+            <div class="mainimage">
                 <img src="spices.jpg" alt="main image" />
+                <header class="title">
+                    <i>Welcome to Spiced and the Future</i>
+                </header>
             </div>
         </container>
     </body>
