--- a/week-one/placing-elements.html
+++ b/week-one/placing-elements.html
@@ -15,13 +15,55 @@
                 <img src="hamburgermenu.svg" alt="hamburger menu" />
             </div>
         </header>
-        <container>
-            <div class="mainimage">
-                <img src="spices.jpg" alt="main image" />
-                <header class="title">
-                    <i>Welcome to Spiced and the Future</i>
-                </header>
+        <main>
+            <img src="spices.jpg" alt="main image" />
+            <div class="title">
+                <h3>Welcome to Spiced and the Future</h3>
+                <button>Get started today</button>
             </div>
-        </container>
+            <section>
+                <div class="container">
+                    <div class="firstbox">
+                        <div class="best"></div>
+                            <img src="cat.svg" alt="" class="icon" />
+                            <h4>Best in class features</h4>
+                            <p>
+                                Nobody does this stuff better than us. You can bet
+                                your life on <br />
+                                that.
+                            </p>
+                        </div>
+                        <div class="acquired"></div>
+                            <img src="swim.svg" alt="" class="icon" />
+                            <h4>An Acquired Taste</h4>
+                            <p>
+                                It may be a little while for you to warm up to us
+                                but once you <br />
+                                do you will never want to switch.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="secondbox">
+                        <div class="best"></div>
+                            <img src="world.svg" alt="" class="icon" />
+                            <h4>Reliable Service</h4>
+                            <p>
+                                You can cout on us to help you whenever you need it.
+                                We're <br />
+                                talking around the clock service
+                            </p>
+                        </div>
+                        <div class="limits">
+                        <img src="columns.svg" alt="" class="icon" />
+                        <h4>No limits</h4>
+                        <p>
+                            There are absolutely no limits. We do not throttle.
+                            We do not <br />
+                            cap.
+                        </p>
+                    </div>
+                </div>                
+            </section>
+        </main>
     </body>
 </html>
