--- a/week-one/placing-elements.html
+++ b/week-one/placing-elements.html
@@ -21,22 +21,20 @@
                 <h3>Welcome to Spiced and the Future</h3>
                 <button>Get started today</button>
             </div>
-            <section>
-                <div class="container">
+            <footer>
+                <!-- <div class="container"> -->
                     <div class="firstbox">
-                        <div class="best"></div>
-                            <img src="cat.svg" alt="" class="icon" />
-                            <h4>Best in class features</h4>
-                            <p>
-                                Nobody does this stuff better than us. You can bet
-                                your life on <br />
-                                that.
+                        <div class="firstcolumn"></div>
+                            <p>    
+                                <img src="cat.svg" alt="" class="icon" />
+                                <h4>Best in class features</h4>
+                                    Nobody does this stuff better than us. You can bet
+                                    your life on <br />
+                                    that.
                             </p>
-                        </div>
-                        <div class="acquired"></div>
-                            <img src="swim.svg" alt="" class="icon" />
-                            <h4>An Acquired Taste</h4>
                             <p>
+                                <img src="swim.svg" alt="" class="icon" />
+                                <h4>An Acquired Taste</h4>                 
                                 It may be a little while for you to warm up to us
                                 but once you <br />
                                 do you will never want to switch.
@@ -44,26 +42,25 @@
                         </div>
                     </div>
                     <div class="secondbox">
-                        <div class="best"></div>
-                            <img src="world.svg" alt="" class="icon" />
-                            <h4>Reliable Service</h4>
-                            <p>
-                                You can cout on us to help you whenever you need it.
-                                We're <br />
-                                talking around the clock service
+                        <div class="secondcolumn"></div>
+                            <p>    
+                                <img src="world.svg" alt="" class="icon" />
+                                <h4>Reliable Service</h4>
+                                    You can cout on us to help you whenever you need it.
+                                    We're <br />
+                                    talking around the clock service
                             </p>
-                        </div>
-                        <div class="limits">
-                        <img src="columns.svg" alt="" class="icon" />
-                        <h4>No limits</h4>
-                        <p>
-                            There are absolutely no limits. We do not throttle.
-                            We do not <br />
-                            cap.
-                        </p>
+                            <p>
+                                <img src="columns.svg" alt="" class="icon" /> 
+                                <h4>No limits</h4>             
+                                    There are absolutely no limits. We do not throttle.
+                                    We do not <br />
+                                    cap.
+                            </p>
+                        </div>                    
                     </div>
-                </div>                
-            </section>
+                <!-- </div>                 -->
+            </footer>
         </main>
     </body>
 </html>
