--- a/week-one/placing-elements.html
+++ b/week-one/placing-elements.html
@@ -21,49 +21,48 @@
                 <h3>Welcome to Spiced and the Future</h3>
                 <button>Get started today</button>
             </div>
-            <section>
-                <div class="firstbox">
-                    <img src="cat.svg" alt="" class="icon" id="cat" />
-                    <div id="bestcopy">
-                        <h4>Best in class features</h4>
-                        <p>
-                            Nobody does this stuff better than us. You can bet
-                            your life on <br />
-                            that.
-                        </p>
-                    </div>
-                    <img src="swim.svg" alt="" class="icon" id="swim" />
-                    <div id="swimcopy">
-                        <h4>An Acquired Taste</h4>
-                        <p>
-                            It may be a little while for you to warm up to us
-                            but once you <br />
-                            do you will never want to switch.
-                        </p>
-                    </div>
-                    <!-- </p> -->
-                </div>
-                <div class="secondbox">
-                    <img src="world.svg" alt="" class="icon" id="world" />
-                    <div id="worldcopy">
-                        <h4>Reliable Service</h4>
-                        <p>
-                            You can cout on us to help you whenever you need it.
-                            We're <br />
-                            talking around the clock service
-                        </p>
-                    </div>
-                    <img src="columns.svg" alt="" class="icon" id="columns" />
-                    <div id="columnscopy">
-                        <h4>No limits</h4>
-                        <p>
-                            There are absolutely no limits. We do not throttle.
-                            We do not <br />
-                            cap.
-                        </p>
-                    </div>
-                </div>
-            </section>
         </main>
+        <section>
+            <div class="firstbox">
+                <img src="cat.svg" alt="" class="icon" id="cat" />
+                <div id="catcopy">
+                    <h4>Best in class features</h4>
+                    <p>
+                        Nobody does this stuff better than us. You can bet your
+                        life on <br />
+                        that.
+                    </p>
+                </div>
+                <img src="swim.svg" alt="" class="icon" id="swim" />
+                <div id="swimcopy">
+                    <h4>An Acquired Taste</h4>
+                    <p>
+                        It may be a little while for you to warm up to us but
+                        once you <br />
+                        do you will never want to switch.
+                    </p>
+                </div>
+            </div>
+            <div class="secondbox">
+                <img src="world.svg" alt="" class="icon" id="world" />
+                <div id="worldcopy">
+                    <h4>Reliable Service</h4>
+                    <p>
+                        You can cout on us to help you whenever you need it.
+                        We're <br />
+                        talking around the clock service
+                    </p>
+                </div>
+                <img src="columns.svg" alt="" class="icon" id="columns" />
+                <div id="columnscopy">
+                    <h4>No limits</h4>
+                    <p>
+                        There are absolutely no limits. We do not throttle. We
+                        do not <br />
+                        cap.
+                    </p>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
