updates html and css file

--- a/week-one/placing-elements.html
+++ b/week-one/placing-elements.html
@@ -16,8 +16,8 @@
             </div>
         </header>
         <main>
-            <img src="spices.jpg" alt="main image" />
-            <div class="title">
+            <div id="mainimage">
+                <img src="spices.jpg" alt="main image" />
                 <h3>Welcome to Spiced and the Future</h3>
                 <button>Get started today</button>
             </div>
