further updates html and css for website

--- a/week-two/webiste-with-hamburger/website.html
+++ b/week-two/webiste-with-hamburger/website.html
@@ -77,21 +77,23 @@
                 <div id="close-button">
                     <p id="close">x</p>
                 </div>
-                <p>
-                    <a href="javascript://">Settings</a>
-                </p>
-                <p>
-                    <a href="javascript://">Pricing</a>
-                </p>
-                <p>
-                    <a href="javascript://">Upgrade</a>
-                </p>
-                <p>
-                    <a href="javascript://">Subscribe</a>
-                </p>
-                <p id="logout">
-                    <a href="javascript://">Logout</a>
-                </p>
+                <div id="menu-items">
+                    <p>
+                        <a href="javascript://">Settings</a>
+                    </p>
+                    <p>
+                        <a href="javascript://">Pricing</a>
+                    </p>
+                    <p>
+                        <a href="javascript://">Upgrade</a>
+                    </p>
+                    <p>
+                        <a href="javascript://">Subscribe</a>
+                    </p>
+                    <p id="logout">
+                        <a href="javascript://">Logout</a>
+                    </p>
+                </div>
             </div>
         </div>
         <script src="website.js"></script>
