carousel files update - clickable buttons incomplete

--- a/week-two/carousel/carousel.html
+++ b/week-two/carousel/carousel.html
@@ -12,6 +12,12 @@
             <img src="kitty images/kit2.jpg" id="kit2" />
             <img src="kitty images/kit3.jpg" id="kit3" />
             <img src="kitty images/kit4.jpg" id="kit4" />
+            <div id="dots">
+                <div class="dot on"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
         </div>
         <script src="carousel.js"></script>
     </body>
