updates website responsiveness

--- a/week-two/webiste-with-hamburger/website.html
+++ b/week-two/webiste-with-hamburger/website.html
@@ -20,10 +20,14 @@
             </div>
         </header>
         <main>
-            <div id="mainimage">
-                <img src="spices.jpg" alt="main image" />
-                <h3>Welcome to Spiced and the Future</h3>
-                <button>Get started today</button>
+            <div class="background">
+                <div id="main-image">
+                    <img src="spices.jpg" alt="hero image" />
+                </div>
+                <div class="image-content">
+                    <h3 id="title">Welcome to Spiced and the Future</h3>
+                    <button id="button">Get started today</button>
+                </div>
             </div>
         </main>
         <section>
