updates connect 4 files

--- a/week-three/connect-four/index.html
+++ b/week-three/connect-four/index.html
@@ -150,6 +150,9 @@
                     </div>
                 </div>
             </div>
+            <div class="buttons">
+                <button class="clear">clear board</button>
+            </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="script.js"></script>
