updates connect 4 files

--- a/week-three/connect-four/index.html
+++ b/week-three/connect-four/index.html
@@ -155,13 +155,16 @@
             </div>
             <div class="footer">
                 <button class="clear">clear board</button>
+                <button class="play-again">play again</button>
                 <div class="turn-indicator player1-turn">
                     <p class="one-turn on">player 1 plays next</p>
                     <p class="two-turn">player 2 plays next</p>
                 </div>
             </div>
         </div>
-        <div class="overlay"></div>
+        <div class="overlay">
+            <div id="modal"></div>
+        </div>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="script.js"></script>
     </body>
