final connect 4 updates

--- a/week-three/connect-four/index.html
+++ b/week-three/connect-four/index.html
@@ -7,8 +7,10 @@
         <title>connect𝟜</title>
     </head>
     <body>
-        <header>
+        <header class="header">
             <div id="logo">connect four</div>
+            <div id="p1-score"></div>
+            <div id="p2-score"></div>
         </header>
         <div class="board-container">
             <div class="board">
