--- a/week-four/spotify-search/index.html
+++ b/week-four/spotify-search/index.html
@@ -7,16 +7,19 @@
         <title>spotify 🔎</title>
     </head>
     <body>
-        <input type="text" name="user-input" placeholder="type here..." />
-        <select>
-            <option id="artist">artist</option>
-            <option id="album">album</option>
-        </select>
-        <div class="results-message"></div>
-        <button id="submit-button">search</button>
-        <div id="results-container"></div>
-
-        <button id="more">show more...</button>
+        <div class="wrapper">
+            <input type="text" name="user-input" placeholder="type here..." />
+            <select>
+                <option id="artist">artist</option>
+                <option id="album">album</option>
+            </select>
+            <div class="results-message"></div>
+            <button id="submit-button">search</button>
+            <div id="results-container"></div>
+            <div>
+                <button id="more">show more...</button>
+            </div>
+        </div>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="script.js"></script>
     </body>
