--- a/week-five/hipster-portfolio/projects/spotify-search/index.html
+++ b/week-five/hipster-portfolio/projects/spotify-search/index.html
@@ -7,6 +7,7 @@
         <title>spotify 🔎</title>
     </head>
     <body>
+        <span id="icon">🔎</span>
         <input type="text" name="user-input" placeholder="type here..." />
         <select>
             <option id="artist">artist</option>
